# tram-sim

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build_and_execute.ps1  data_loaders.cpp  main.cpp  stops_loader.cpp
data/: routes.json  stops.json
headers/: city_structure.hpp  data_loaders.hpp  graph.hpp  stop.hpp  stops_loader.hpp
